fix(react): fix storylite overflow-x

--- a/packages/react/.storylite/styles/storylite-iframe.css
+++ b/packages/react/.storylite/styles/storylite-iframe.css
@@ -25,6 +25,8 @@ body,
 .storylite-iframe,
 .storylite-story {
   position: relative;
+  /** fix overflow-x not working */
+  display: block;
   max-width: 100vw;
   min-height: 100vh;
   /*noinspection CssInvalidPropertyValue*/
